# labgrid-tui

./: Cargo.toml  README.md  build.rs  pyproject.toml
proto/: labgrid-coordinator.proto
python/labgrid_tui/: __init__.py
src/: app.rs  config.rs  event.rs  lib.rs  main.rs
src/grpc/: client.rs  mod.rs
src/model/: exporter.rs  mod.rs  place.rs  resource.rs
src/ui/: command.rs  detail.rs  exporters.rs  header.rs  help.rs  mod.rs  places.rs  resources.rs  theme.rs
